--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </head>
   <body>
     <!-- //NAV Bar -->
-    <nav class="container">
+    <nav class="container nav-container">
       <div>
         <a class="logo-link" href="#">
           <img
             class="logo"
-            src="./photos/logo-taslema.png"
+            src="./photos/logo-taslema .png"
             alt="logo-taslema"
           />
         </a>
@@ -33,8 +33,13 @@
 
       <ul class="nav-list">
         <li><a href="#partner">Be a partner</a></li>
-        <li><a href="./appdownload.html">Get the app</a></li>
-        <li><a href="./contact-us.html">Contact us</a></li>
+        <li>
+          <a
+            target="_blank"
+            href="https://taslema.app.link/taslema-download-appl"
+            >Get the app</a
+          >
+        </li>
         <li><a href="./our-story.html">Our Story</a></li>
       </ul>
     </nav>
@@ -131,12 +136,9 @@
           <div class="testimonial-content">
             <i class="fas fa-quote-right quote"></i>
             <p>
-              I really can't imagine my business expanding and growing if
+              I can't imagine my business expanding and growing if
               <span class="highlted-text">Taslema</span> (previously Presto)
-              wasn't there for me. I am always ready to deliver to any customer
-              with <span class="highlted-text">Taslema</span> (previously
-              Presto).
-            </p>
+              wasn't there for me.             </p>
             <div class="info">
               <h3>Asmaa Othman</h3>
               <p>Food Planet</p>
@@ -160,9 +162,7 @@
 
             <p class="feedback">
               I have always suffered to deliver products to customers, sometimes
-              I even deliver by myself. Now I just press a button then I find
-              <span class="highlted-text">Taslema</span> (previously Presto) in
-              front of my door. Excellent service!
+              I even deliver by myself.
             </p>
             <div class="info">
               <h3>Nada Ezz eldien</h3>
@@ -174,10 +174,25 @@
       </div>
     </section>
 
+    
+    <section id="partner" class="container-column">
+      <div class="container">
+        <div class="container-column">
+          <h2>Be one of Taslema super growing partners</h2>
+
+          <p class="content">
+            With Taslema your products are always on the way to your clients,
+            get more clients and expand your service with Taslema
+          </p>
+          <button class="btn">Join Taslema Partners</button>
+        </div>
+        <img class="who-img" src="./photos/IMG_0084.JPG" alt="" />
+      </div>
+    </section>
     <!-- who can work with us -->
     <section class="container-column">
       <h2>Who can work with us?</h2>
-      <div class="container ">
+      <div class="container">
         <div class="places">
           <div class="place-container">
             <i class="fas fa-hamburger"></i>
@@ -196,55 +211,32 @@
             <h3>Super Market</h3>
           </div>
           <div class="place-container">
-            <i class="fas fa-map-marker-alt"></i>            <h3>Any Place</h3>
+            <i class="fas fa-map-marker-alt"></i>
+            <h3>Any Place</h3>
           </div>
         </div>
         <img class="who-img" src="./photos/1.jpg" alt="" />
       </div>
     </section>
-    <section id="partner" class="container-column">
-<h2>Be one of Taslema super growing partners</h2>
-<div class="container">
-  <div class="container-column">
-    <p >With Taslema your products are always on the way to your clients, get more clients and expand your service with Taslema
-      <ul>
-        <li>Request delivery agent in less than 20 min</li>
-        <li>Get paid in advance</li>
-        <li>Your product will be delivered in less than 60 min</li>
-      </ul>  
-      <button class="btn">Join Taslema Partners</button>
-      </p>
-  </div>
-  <img class="who-img" src="./photos/IMG_0084.JPG" alt="">
-
-</div>
-    </section>
     <footer>
       <div class="follow">
         <h2>Follow us on Social Media</h2>
         <div class="social-media">
-          <i class="fab fa-facebook-square"
-            ><a href="https://www.facebook.com/TaslemaDeliveryService"></a
-          ></i>
-          <i class="fab fa-twitter-square"
-            ><a href="https://twitter.com/prestoeg"></a
-          ></i>
-          <i class="fab fa-instagram-square"
-            ><a href="https://www.instagram.com/prestoeg/"></a
-          ></i>
-          <i class="fab fa-linkedin"
-            ><a href="https://www.linkedin.com/company/prestoeg/"></a
-          ></i>
+          <a
+            target="_blank"
+            href="https://www.facebook.com/TaslemaDeliveryService"
+            ><i class="fab fa-facebook-square"> </i
+          ></a>
+          <a target="_blank" href="https://twitter.com/prestoeg">
+            <i class="fab fa-twitter-square"></i
+          ></a>
+          <a target="_blank" href="https://www.instagram.com/prestoeg/"
+            ><i class="fab fa-instagram-square"> </i
+          ></a>
+          <a target="_blank" href="https://www.linkedin.com/company/prestoeg/">
+            <i class="fab fa-linkedin"></i
+          ></a>
         </div>
-      </div>
-
-      <div class="download-app">
-        <h2>App is available for download</h2>
-        <img
-          class="download"
-          src="./photos/png-transparent-app-store-google-play-apple-apple-text-logo-sign.png"
-          alt=""
-        />
       </div>
     </footer>
     <script src="app.js"></script>
