adding new sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- //NAV Bar -->
-    <nav class="container nav-container">
+    <nav class="nav-container">
       <div>
         <a class="logo-link" href="#">
           <img
@@ -53,10 +53,8 @@
           Taslema app so when your customers need anything you can be as far as
           a click.
         </p>
+        <img class="header-img" src="./photos/z1.png" alt="">
       </div>
-      <video autoplay loop>
-        <source src="./photos/Taslema.mp4" type="video/mp4" />
-      </video>
     </header>
 
     <!-- vendors logo slider section  -->
@@ -224,16 +222,16 @@
         <div class="social-media">
           <a
             target="_blank"
-            href="https://www.facebook.com/TaslemaDeliveryService"
+            href="https://www.facebook.com/TaslemaOfficial"
             ><i class="fab fa-facebook-square"> </i
           ></a>
-          <a target="_blank" href="https://twitter.com/prestoeg">
+          <a target="_blank" href="https://twitter.com/TaslemaOfficial">
             <i class="fab fa-twitter-square"></i
           ></a>
-          <a target="_blank" href="https://www.instagram.com/prestoeg/"
+          <a target="_blank" href="https://www.instagram.com/taslemaofficial/"
             ><i class="fab fa-instagram-square"> </i
           ></a>
-          <a target="_blank" href="https://www.linkedin.com/company/prestoeg/">
+          <a target="_blank" href="https://www.linkedin.com/company/taslema/">
             <i class="fab fa-linkedin"></i
           ></a>
         </div>
