adding new content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Taslema app so when your customers need anything you can be as far as
           a click.
         </p>
-        <img class="header-img" src="./photos/z1.png" alt="">
+        <img class="header-img" src="./photos/z1.png" alt="" />
       </div>
     </header>
 
@@ -136,7 +136,8 @@
             <p>
               I can't imagine my business expanding and growing if
               <span class="highlted-text">Taslema</span> (previously Presto)
-              wasn't there for me.             </p>
+              wasn't there for me.
+            </p>
             <div class="info">
               <h3>Asmaa Othman</h3>
               <p>Food Planet</p>
@@ -172,7 +173,6 @@
       </div>
     </section>
 
-    
     <section id="partner" class="container-column">
       <div class="container">
         <div class="container-column">
@@ -217,23 +217,39 @@
       </div>
     </section>
     <footer>
-      <div class="follow">
-        <h2>Follow us on Social Media</h2>
-        <div class="social-media">
-          <a
-            target="_blank"
-            href="https://www.facebook.com/TaslemaOfficial"
-            ><i class="fab fa-facebook-square"> </i
-          ></a>
-          <a target="_blank" href="https://twitter.com/TaslemaOfficial">
-            <i class="fab fa-twitter-square"></i
-          ></a>
-          <a target="_blank" href="https://www.instagram.com/taslemaofficial/"
-            ><i class="fab fa-instagram-square"> </i
-          ></a>
-          <a target="_blank" href="https://www.linkedin.com/company/taslema/">
-            <i class="fab fa-linkedin"></i
-          ></a>
+      <div class="footer-container">
+        <div class="follow">
+          <h2>Follow us on Social Media</h2>
+
+          <div class="social-media">
+            <a target="_blank" href="https://www.facebook.com/TaslemaOfficial"
+              ><i class="fab fa-facebook-square"> </i
+            ></a>
+            <a target="_blank" href="https://twitter.com/TaslemaOfficial">
+              <i class="fab fa-twitter-square"></i
+            ></a>
+            <a target="_blank" href="https://www.instagram.com/taslemaofficial/"
+              ><i class="fab fa-instagram-square"> </i
+            ></a>
+            <a target="_blank" href="https://www.linkedin.com/company/taslema/">
+              <i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="privacy">
+          <h2>Privacy and Policies</h2>
+          <ul>
+            <li>
+              <a href="./client-privacy-policy.html">Client privacy and policy</a>
+            </li>
+            <li>
+              <a href="./client-terms-and-conditions.html"
+                >Client Terms and Conditions</a
+              >
+            </li>
+          </ul>
+         
         </div>
       </div>
     </footer>
